--- a/src/components/engine/engine.module.scss
+++ b/src/components/engine/engine.module.scss
@@ -14,3 +14,22 @@
   left: 0;
   background-color: #ffd600;
 }
+
+.stage {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 0;
+  height: 100vh;
+  width: calc(10 * 100vw);
+}
+
+.block {
+  position: absolute;
+  display: block;
+  height: 200px;
+  width: 80px;
+  bottom: 0;
+  left: 0;
+  background-color: red;
+}
